# optic-python

./: .flake8  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  Taskfile.yml
.github/workflows/: publish-django-middleware.yml  publish-django-unittest.yml  publish-sdk.yml  run_tests.yml  run_tests_release.yml
frameworks/django/optic_django_core/: pyproject.toml
frameworks/django/optic_django_core/tests/: test_optic_django_core.py
frameworks/django/optic_django_middleware/: README.md  pyproject.toml  tox.ini
frameworks/django/optic_django_middleware/optic_django_middleware/: apps.py  container.py  manager.py  middleware.py  serializers.py
frameworks/django/optic_django_middleware/tests/: settings.py  test_app_config.py  test_middleware.py  test_serializer.py  urls.py
frameworks/django/optic_django_middleware/tests/fixtures/: __init__.py
frameworks/django/optic_django_unittest/: README.md  pyproject.toml  runtests.py  tox.ini
frameworks/django/optic_django_unittest/optic_django_unittest/: container.py  manager.py
frameworks/django/optic_django_unittest/tests/: settings.py  test_middleware.py  test_optic_django_unittest.py  test_query_count_containers.py  test_query_count_runner.py  urls.py  views.py
frameworks/django/optic_django_unittest/tests/test_app/: views.py
frameworks/django/optic_django_unittest/tests/unittest_test_app/: views.py
sdk/: README.md  pyproject.toml  tox.ini
sdk/optic/: __init__.py  main.py
sdk/tests/: optic.yml  test_optic.py
sdk/tests/fixtures/: __init__.py
