[tool.poetry]
name = "optic-sdk"
version = "0.1.0"
description = "Python SDK for Optic"
authors = ["Mukesh <mmukesh95@hotmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/silentninja/optic-python"
repository = "https://github.com/silentninja/optic-python/sdk"
keywords = ["swagger", "optic", "sdk", "api"]
classifiers = [
    "Environment :: Console",
    "Framework :: Flake8",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
include = [
    "LICENSE",
]
packages = [
    { include = "optic" },
]
[tool.poetry.dependencies]
python = "^3.7 || ^3.8 || ^3.9"
requests = "^2.26.0"



[tool.poetry.dev-dependencies]
tox = "^3.23.1"
codecov = "^2.1.11"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.isort]
profile = "black"
multi_line_output = 3
