[tool.poetry]
name = "optic-sdk"
version = "0.1.0"
description = "Python SDK for Optic"
authors = ["Mukesh <mmukesh95@hotmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/silentninja/optic-python"
repository = "https://github.com/silentninja/optic-python/sdk"
keywords = ["swagger", "optic", "sdk", "api"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 3.7',
    'Framework :: Django :: 3.8',
    'Framework :: Django :: 3.9',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    'Topic :: Internet :: WWW/HTTP',
    'License :: OSI Approved :: MIT License'
]
include = [
    "LICENSE",
]
packages = [
    { include = "optic" },
]
[tool.poetry.dependencies]
python = "^3.7 || ^3.8 || ^3.9"
requests = "^2.26.0"



[tool.poetry.dev-dependencies]
tox = "^3.23.1"
codecov = "^2.1.11"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.isort]
profile = "black"
multi_line_output = 3
