[tool.poetry]
name = "optic_django_middleware"
version = "0.1.0"
description = ""
authors = ["Mukesh <mmukesh95@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7 || ^3.8 || ^3.9"
optic = { path = "../../../sdk", develop = true }
Django = "^3.2.4"
kubi-ecs-logger = "^0.1.0"


[tool.poetry.dev-dependencies]
tox = "^3.23.1"
codecov = "^2.1.11"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
