[tool.poetry]
name = "optic_django_unittest"
version = "0.1.0"
description = ""
authors = ["Mukesh <mmukesh95@hotmail.com>"]

[tool.poetry.dependencies]
python = "~3.7 || ^3.8 || ^3.9"
optic_django_middleware = { path = "../optic_django_middleware", develop = true }

[tool.poetry.dev-dependencies]
tox = "^3.23.1"
codecov = "^2.1.11"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
